<resources>
    <string name="app_name">SDPD Assignment</string>
    <string name="title_activity_Home">Home</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sentsms">Sent SMS</string>
    <string name="title_activity_allsms">All SMS</string>
    <string name="title_activity_contact">Contacts</string>
    <string name="title_activity_slate">Slate</string>
    <string name="title_activity_phone_details">Phone Status</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="auth_in_progress">Please wait… Authentication is in-progress…</string>

    <!-- Strings related to Activities -->
    <string name="sms_activity_desc">Sent SMS\'s</string>
    <string name="contact_activity_desc">Contacts With Phone No.</string>
    <string name="all_sms_activity_desc">All messages from Inbox, Sent &amp; draft</string>
    <string name="phone_details_activity_desc">Phone Details</string>
    <string name="slate_activity_desc">A paint canvas to paint</string>

    <string name="contactActivityName">Phone Contacts</string>
    <string name="smsActivityName">Sent SMS\'s</string>
    <string name="biometricActivityName">Biometric Sign-in</string>
    <string name="phone_details_label">Phone Details</string>
    <string name="phone_details_button_label">Okay, Thanks!</string>
    <string name="tab_text_1">Inbox</string>
    <string name="tab_text_2">Sent</string>
    <string name="tab_text_3">Draft</string>

    <!--Contact alert messages -->
    <string name="contact_id">ID : </string>
    <string name="contact_Name">Name : </string>
    <string name="contact_phoneno">Phone No : </string>
    <string name="contact_timescon">Contacted : </string>
    <string name="contact_times">times.</string>
    <string name="contact_action_cancel">Cancel</string>
    <string name="contact_loading">Please wait while the contacts are accessed...</string>

    <!--SMS Details-->
    <string name="sms_details">SMS Details</string>
    <string name="sms_to">To</string>
    <string name="sms_date">Date</string>
    <string name="sms_status">Status</string>
    <string name="sms_read">Read</string>
    <string name="sms_body">Message</string>
    <string name="sms_address">Address</string>
    <string name="sms_type">Type</string>
    <string name="sms_contact">Contact</string>
    <string name="sms_tot_char">Tot Chars</string>

    <!--Menu items-->
    <string name="choose_colour">Choose Colour</string>
    <string name="home">Choose Colour</string>
    <string name="clear">Choose Colour</string>

    <!--For slate-->
    <string name="colour_red">Red</string>
    <string name="colour_blue">Blue</string>
    <string name="colour_green">Green</string>

    <string name="done">Done</string>

    <!--For Login-->

    <!--For Phone Status-->
    <string name="status_battery">Battery</string>
    <string name="status_battery_level">Current level</string>
    <string name="status_battery_charging">Charging</string>
    <string name="status_battery_discharging">Discharging</string>
    <string name="status_battery_status">Status</string>
    <string name="status_battery_charging_USB">USB Plug</string>
    <string name="status_battery_charging_AC">AC Power</string>
    <string name="status_battery_docking">Docking</string>

    <string name="status_network">Network</string>
    <string name="status_network_connected">Connected</string>
    <string name="status_network_disconnected">Disconnected</string>
    <string name="status_network_connection">Connection</string>
    <string name="status_network_connection_wifi">WiFi</string>
    <string name="status_network_connection_cell_data">Cellular Data</string>

    <string name="status_Bluetooth">Bluetooth</string>
    <string name="status_Bluetooth_status">Status</string>
    <string name="status_Bluetooth_status_enabled">Enabled</string>
    <string name="status_Bluetooth_status_disabled">Disabled</string>
    <string name="status_Bluetooth_status_unsupported">Unsupported</string>
    <string name="status_Bluetooth_profile_headset">Headset</string>
    <string name="status_Bluetooth_profile_a2dp">A2DP</string>
    <string name="status_Bluetooth_profile_health">Health</string>
    <string name="status_Bluetooth_profile_connected">Connected</string>
    <string name="status_Bluetooth_profile_disconnected">Disconnected</string>


    <!--Fingerprint related-->
    <string name="title_fingerprint">Biometric Sign-in</string>
    <string name="desc_fingerprint">Please place your finger on the scanner to initiate biometric scan.</string>
    <string name="action_use_fingerprint">Use Fingerprint Instead</string>
    <string name="bio_scan_limit_exceeded">Biometric scan disabled as scan limits exceeded.</string>
    <string name="redirect_login">Redirecting to \'Login\' functionality…</string>
    <string name="back_to_login">Back to Login</string>

    <string name="lock_screen_not_enabled">Lock screen security not enabled in Settings.</string>
    <string name="atleast_one_fingerprint_needed">Register at least one fingerprint in Settings or use default Login to continue…</string>
    <string name="fingerprint_permission_not_enabled">Fingerprint authentication permission not enabled…</string>
    <string name="fingerprint_scanner_not_found">Your Device does not have a Fingerprint Sensor. Please use default Login to continue…</string>
    <string name="fingerprint_auth_error">Fingerprint Authentication error</string>
    <string name="fingerprint_auth_failed">Fingerprint Authentication failed</string>
    <string name="fingerprint_auth_help">Fingerprint Authentication help</string>
    <string name="fingerprint_auth_success">Fingerprint Authentication succeeded. Navigating to Home screen...</string>

    <!-- Toast /Messages -->
    <string name="feature_not_supported">Sorry! This function is not yet supported…</string>
    <string name="contact_access_denied">Access denied! Cannot access contacts…</string>
    <string name="phone_access_denied">Access denied! Cannot access phone status…</string>
    <string name="sms_access_denied">Access denied! Cannot access SMS\'s…</string>
    <string name="contact_load_failed">Could not load contacts…!</string>
    <string name="contact_cache_being_updated">Updating contact cache for app…!</string>
    <string name="contact_cache_updated">Contact cache for app updated…!</string>
    <string name="login_welcome">Welcome, </string>
</resources>
