<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oracle.bits.parasjos.sdpdassignment.ContactDetailsActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dialog_contact_profile_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user_account"
        android:layout_gravity="fill"
        android:maxHeight="100dp"
        android:minHeight="70dp"
        android:maxWidth="100dp"
        android:minWidth="70dp"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="2"
        android:layout_gravity="center">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:textColor="@color/colorJetBlack"
                android:textAlignment="viewEnd"
                android:text="@string/contact_id"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/contact_id_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:textColor="@color/colorJetBlack"
                android:textAlignment="viewEnd"
                android:text="@string/contact_Name"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/contact_name_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:maxWidth="250dp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:textColor="@color/colorJetBlack"
                android:textAlignment="viewEnd"
                android:text="@string/contact_phoneno"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/contact_phone_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:textColor="@color/colorJetBlack"
                android:textAlignment="viewEnd"
                android:text="@string/contact_timescon"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/contact_timescon_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="10dp"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/contact_action_sms"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left|fill"
            android:background="@null"
            android:drawableLeft="@drawable/ic_sms_action"
            android:layout_marginLeft="20sp"
            android:paddingTop="20sp"
            android:paddingBottom="10sp"/>
        <Button
            android:id="@+id/contact_action_call"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|fill"
            android:background="@null"
            android:drawableLeft="@drawable/ic_green_call"
            android:layout_marginLeft="20sp"
            android:paddingTop="20sp"
            android:paddingBottom="10sp"
            />
        <Button
            android:id="@+id/contact_action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|fill"
            android:text="@string/contact_action_cancel"
            android:background="@null"
            android:layout_marginLeft="20sp"
            android:paddingTop="20sp"
            android:paddingBottom="10sp"/>

    </LinearLayout>

</LinearLayout>
